--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,7 @@ kotlinVersion=1.7.20
 # add with Kotlin 1.7+
 # kotlin.incremental.useClasspathSnapshot=true
 #android.enableAdditionalTestOutput=true
+
+android.enableR8.fullMode=true
+android.enableResourceOptimizations=true
+android.nonTransitiveRClass=true
